manifests/skill-catalog-service/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: skill-catalog-postgres
  namespace: osaan-dev
spec:
  serviceName: skill-catalog-postgres
  replicas: 1
  selector:
    matchLabels:
      app: skill-catalog-postgres
  template:
    metadata:
      labels:
        app: skill-catalog-postgres
    spec:
      imagePullSecrets:
      - name: redhat-registry-pull-secret
      containers:
        - name: osaan-postgres
          image: registry.redhat.io/rhel10/postgresql-16:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: skill-catalog-postgres
  namespace: osaan-dev
spec:
  selector:
    app: skill-catalog-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None
