manifests/skill-catalog-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skill-catalog-svc
  namespace: osaan-dev
spec:
  selector:
    app: skill-catalog-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
