manifests/skill-catalog-service/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: skill-catalog-service-route
  namespace: osaan-dev
  labels:
    app: skill-catalog-service
spec:
  to:
    kind: Service
    name: skill-catalog-svc
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
